# text-search

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
api/: api.py
data_tools/: import_from_csv_to_postgresql.py  logstash_sync_template.conf  schema.sql
